--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -5,19 +5,25 @@
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
-        height: 70vh;
-        width: 100%;
+        height: 50vh;
     }
     .texto{
         display: flex;
         flex-flow: column wrap;
-        align-content: flex-end;
-        justify-content: flex-end;
-        width: 410px;
+        align-content: center;
+        justify-content: center;
+        padding-left: 15px;
+        width: 90%;
         height: 200px;
 
         h1{
+            font-size: 30px;
+            font-weight: 700;
             padding-bottom: 10px;
+        }
+
+        p{
+            font-size: 11px;
         }
     }
     
@@ -30,17 +36,26 @@
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
-        height: 70vh;
-        width: 100%;
+        height: 60vh;
     }
     .texto{
         display: flex;
         flex-flow: column wrap;
         align-content: flex-end;
         justify-content: flex-end;
-        width: 420px;
-        height: 200px;
+        width: 480px;
+        height: 160px;
+
+        h1{
+            font-size: 40px;
+            padding-bottom: 10px;
+        }
+    
+        p{
+            font-size: 15px;
+        }
     }
+    
 }
 
 // Medium devices (tablets, 768px and up)
@@ -51,15 +66,23 @@
         background-size: contain;
         background-position: center;
         height: 70vh;
-        width: 100%;
     }
     .texto{
         display: flex;
         flex-flow: column wrap;
         align-content: flex-end;
         justify-content: flex-end;
-        width: 430px;
+        width: 610px;
         height: 200px;
+
+        h1{
+            padding-bottom: 10px;
+            font-size: 50px;
+        }
+
+        p{
+            font-size: 25px;
+        }
     }
 }
 
@@ -71,7 +94,6 @@
         background-size: contain;
         background-position: center;
         height: 100vh;
-        width: 100%;
     }
     
     .texto{
@@ -79,8 +101,17 @@
         flex-flow: column wrap;
         align-content: flex-end;
         justify-content: flex-end;
-        width: 440px;
-        height: 200px;
+        width: 720px;
+        height: 250px;
+
+        h1{
+            padding-bottom: 10px;
+            font-size: 60px;
+        }
+
+        p{
+            font-size: 25px;
+        }
     }
 }
 
@@ -91,8 +122,7 @@
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
-        height: 100vh;
-        width: 100%;
+        height: 90vh;
     }
     
     .texto{
@@ -100,8 +130,17 @@
         flex-flow: column wrap;
         align-content: flex-end;
         justify-content: flex-end;
-        width: 460px;
-        height: 200px;
+        width: 740px;
+        height: 250px;
+        
+        h1{
+            padding-bottom: 10px;
+            font-size: 60px;
+        }
+
+        p{
+            font-size: 25px;
+        }
     }
 }
 
