--- a/assets/sass/layout/_seccionGrafico.scss
+++ b/assets/sass/layout/_seccionGrafico.scss
@@ -1,31 +1,33 @@
-.grid-container-grafico {
-    display: grid;
-    grid-template-columns: auto auto ;
+.flex-container {
+    // border: 1px solid black;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    color: black;
+  }
+  
+.titulografi{
+    font-size: 30px;
+    padding-bottom: 50px;
 }
 
-.grid-item {
-    // border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    text-align: center;
-}
-
-.item1 {
-    grid-column: 1 / span 2;
-}
-
-.item2 {
-    grid-row: 1 / span 1;
-    grid-row: 3;
-    margin-left: auto;
-}
-
-.item3 {
-    grid-row: 1 / span 2;
-    grid-row: 3;
-    margin-right: auto;
-    h1{
-        padding-bottom: 10px;
+.contenedoGraf{
+    display: flex;
+    flex-flow: row wrap;
+    // padding: 20px;
+    .textoGrafico{
+        margin-left: 60px;
+        h1{
+            font-size: 30px;
+            padding-bottom: 10px;
+        }
+        p{
+            font-size: 15px;
+        }
+    }
+    .grafico{
+        text-align: center;
     }
 }
-
-
