--- a/assets/sass/layout/_seccionPrecios.scss
+++ b/assets/sass/layout/_seccionPrecios.scss
@@ -1,22 +1,49 @@
 .fondoprecios{
     background-image: url('../img/bg-price.svg');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
-    height: 70vh;
+    height: 100vh;
     width: 100%;
 }
-.texto{
-    display: flex;
-    flex-flow: column wrap;
-    align-content: flex-end;
-    justify-content: flex-end;
-    width: 410px;
-    height: 200px;
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: 100px 400px;
+    grid-gap: 10px; //separacion entre columnnas
+    padding: 10px;
+    align-content: center;
+    height: 100%;
+    width: 100%;
 
     h1{
-        padding-bottom: 10px;
+        top: 50px;
+        font-size: 40px;
+        color: white;
+        grid-column: 1 / span 4;
+        text-align: center;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
     }
+  }
+  
+.grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+} 
+
+.item1{
+    grid-column: 2 / span 1;
 }
+
+.item2{
+    grid-column: 3 / span 1;
+}
+
+
 
 
