--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,7 @@
 
 // // base
 @import './base/reset';
+@import './base/typography';
 
 // layout
 @import './layout/grid';
@@ -10,6 +11,7 @@
 @import './layout/header';
 @import './layout/seccionGrafico';
 @import './layout/seccionPrecios';
+@import './layout/footer';
 
 
 
