--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -1,4 +1,5 @@
 .navegacion__barra{
+    list-style: $none;
     display: flex;
     width: 100%;
     height: 60px;
@@ -12,6 +13,7 @@
         justify-content: flex-end;
         flex-grow: 1;
         padding-top: 20px;
+        list-style: $none;
     }
 
     &__item{
