--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -19,7 +19,7 @@
     }
 
     &__item{
-        // margin: 0 10px;
+        margin: 0 10px;
         font-size: 16px;
         font-weight: 600;
     }
