--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,153 +14,6 @@ body {
   font-family: "Raleway", sans-serif;
 }
 
-@media (max-width: 575.98px) {
-  .navegacion__barra ul li {
-    display: none;
-  }
-
-  .header {
-    background-image: url("../img/bg-hero.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    height: 50vh;
-  }
-
-  .texto {
-    display: flex;
-    flex-flow: column wrap;
-    align-content: center;
-    justify-content: center;
-    padding-left: 15px;
-    width: 90%;
-    height: 200px;
-  }
-  .texto h1 {
-    font-size: 30px;
-    font-weight: 700;
-    padding-bottom: 10px;
-  }
-  .texto p {
-    font-size: 11px;
-  }
-}
-@media (min-width: 576px) and (max-width: 767.98px) {
-  .navegacion__barra ul li {
-    display: none;
-  }
-
-  .header {
-    background-image: url("../img/bg-hero.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    height: 60vh;
-  }
-
-  .texto {
-    display: flex;
-    flex-flow: column wrap;
-    align-content: flex-end;
-    justify-content: flex-end;
-    width: 480px;
-    height: 160px;
-  }
-  .texto h1 {
-    font-size: 40px;
-    padding-bottom: 10px;
-  }
-  .texto p {
-    font-size: 15px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .navegacion__barra #icono {
-    display: none;
-  }
-
-  .header {
-    background-image: url("../img/bg-hero.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    height: 70vh;
-  }
-
-  .texto {
-    display: flex;
-    flex-flow: column wrap;
-    align-content: flex-end;
-    justify-content: flex-end;
-    width: 610px;
-    height: 200px;
-  }
-  .texto h1 {
-    padding-bottom: 10px;
-    font-size: 50px;
-  }
-  .texto p {
-    font-size: 20px;
-  }
-}
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .navegacion__barra #icono {
-    display: none;
-  }
-
-  .header {
-    background-image: url("../img/bg-hero.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    height: 100vh;
-  }
-
-  .texto {
-    display: flex;
-    flex-flow: column wrap;
-    align-content: flex-end;
-    justify-content: flex-end;
-    width: 740px;
-    height: 250px;
-  }
-  .texto h1 {
-    padding-bottom: 10px;
-    font-size: 60px;
-  }
-  .texto p {
-    font-size: 20px;
-  }
-}
-@media (min-width: 1200px) {
-  .navegacion__barra #icono {
-    display: none;
-  }
-
-  .header {
-    background-image: url("../img/bg-hero.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    height: 90vh;
-  }
-
-  .texto {
-    display: flex;
-    flex-flow: column wrap;
-    align-content: flex-end;
-    justify-content: flex-end;
-    width: 740px;
-    height: 250px;
-  }
-  .texto h1 {
-    padding-bottom: 10px;
-    font-size: 60px;
-  }
-  .texto p {
-    font-size: 20px;
-  }
-}
 .navegacion__barra {
   list-style: none;
   display: flex;
@@ -241,162 +94,6 @@ body {
 .contenedoGraf .grafico .d-bar, .contenedoGraf .grafico .e-bar, .contenedoGraf .grafico .f-bar {
   animation: example2 5s cubic-bezier(1, 0, 0, 1) infinite;
 }
-@keyframes example {
-  25% {
-    fill: #EE9480;
-    top: 10px;
-  }
-  50% {
-    fill: #2AB7CA;
-    left: 0px;
-  }
-  75% {
-    fill: #2AB7CA;
-    left: 0px;
-  }
-  100% {
-    fill: red;
-    left: 0px;
-  }
-}
-@keyframes example2 {
-  0% {
-    fill: #2AB7CA;
-    left: 0px;
-  }
-  25% {
-    fill: #2AB7CA;
-    left: 0px;
-  }
-  50% {
-    fill: #EE9480;
-    left: 100px;
-  }
-  75% {
-    fill: #EE9480;
-    left: 100px;
-  }
-  100% {
-    fill: red;
-    left: 0px;
-  }
-}
-
-.fondoprecios {
-  background-image: url("../img/bg-price.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: 100px 450px;
-  grid-gap: 0 80px;
-  padding-bottom: 100px;
-  color: black;
-  align-content: flex-end;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-}
-.grid-container .titulob {
-  font-size: 40px;
-  color: white;
-  grid-column: 1/span 4;
-  text-align: center;
-}
-
-.grid-container > div {
-  background-color: white;
-  text-align: center;
-  padding: 30px 30px;
-  font-size: 30px;
-}
-
-.item1 {
-  border-radius: 25px;
-  width: 300px;
-  grid-column: 2/span 1;
-}
-.item1 h2 {
-  text-align: left;
-  font-size: 25px;
-  font-weight: 400;
-}
-.item1 h1 {
-  text-align: left;
-  font-weight: 700;
-  font-size: 35px;
-}
-.item1 li {
-  text-align: left;
-  font-size: 13px;
-  font-weight: 400;
-  padding: 10px 0;
-}
-.item1 .paddingli {
-  margin-top: 20px;
-  margin-bottom: 150px;
-}
-.item1 input {
-  margin-top: 20px;
-  width: 100%;
-  padding: 10px 0;
-  border: 0 solid;
-  background-color: #2ab7ca;
-  color: white;
-}
-
-.item2 {
-  border-radius: 25px;
-  width: 300px;
-  grid-column: 3/span 1;
-}
-.item2 h2 {
-  text-align: left;
-  font-size: 25px;
-  font-weight: 400;
-}
-.item2 h1 {
-  text-align: left;
-  font-weight: 700;
-  font-size: 35px;
-}
-.item2 li {
-  text-align: left;
-  font-size: 13px;
-  font-weight: 400;
-  padding: 10px 0;
-}
-.item2 .paddingli2 {
-  margin-top: 20px;
-  margin-bottom: 45px;
-}
-.item2 input {
-  margin-top: 20px;
-  width: 100%;
-  padding: 10px 0;
-  border: 0 solid;
-  background-color: #2ab7ca;
-  color: white;
-}
-
-input:hover {
-  background-color: #77d1dd;
-  border: 0px;
-}
-
-input:focus {
-  background-color: #8f9199;
-  border: 0px;
-}
-
-.item1:hover, .item2:hover {
-  box-shadow: 8px 8px 9px 0 black;
-}
 
 .Barra__Footer {
   background-color: #221d23;
@@ -423,6 +120,572 @@ input:focus {
 }
 .Barra__Footer .ml {
   margin-left: auto;
+}
+
+@media (max-width: 575.98px) {
+  .navegacion__barra ul li {
+    display: none;
+  }
+
+  .header {
+    background-image: url("../img/bg-hero.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 50vh;
+  }
+
+  .texto {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    justify-content: center;
+    padding-left: 15px;
+    width: 90%;
+    height: 200px;
+  }
+  .texto h1 {
+    font-size: 30px;
+    font-weight: 700;
+    padding-bottom: 10px;
+  }
+  .texto p {
+    font-size: 11px;
+  }
+
+  .fondoprecios {
+    background-image: url("../img/bg-price.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 160vh;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: 100px 450px;
+    grid-gap: 20px 80px;
+    padding-bottom: 50px;
+    align-content: flex-end;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
+  .grid-container .titulob {
+    text-shadow: 2px 2px black;
+    font-size: 40px;
+    color: white;
+    text-align: center;
+  }
+
+  .grid-container > div {
+    background-color: white;
+    text-align: center;
+    padding: 30px 30px;
+    font-size: 30px;
+    border-radius: 25px;
+    width: 300px;
+  }
+  .grid-container > div h2 {
+    text-align: left;
+    font-size: 25px;
+    font-weight: 400;
+  }
+  .grid-container > div h1 {
+    text-align: left;
+    font-weight: 700;
+    font-size: 35px;
+  }
+  .grid-container > div li {
+    text-align: left;
+    font-size: 13px;
+    font-weight: 400;
+    padding: 10px 0;
+  }
+  .grid-container > div input {
+    margin-top: 20px;
+    width: 100%;
+    padding: 10px 0;
+    border: 0 solid;
+    background-color: #2ab7ca;
+    color: white;
+  }
+  .grid-container > div input:hover {
+    background-color: #77d1dd;
+    border: 0px;
+  }
+  .grid-container > div input:focus {
+    background-color: #8f9199;
+    border: 0px;
+  }
+
+  .item1 .paddingli {
+    margin-top: 20px;
+    margin-bottom: 150px;
+  }
+
+  .item2 .paddingli2 {
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+
+  .item1:hover, .item2:hover {
+    box-shadow: 8px 8px 9px 0 black;
+  }
+}
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .navegacion__barra ul li {
+    display: none;
+  }
+
+  .header {
+    background-image: url("../img/bg-hero.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 60vh;
+  }
+
+  .texto {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-end;
+    justify-content: flex-end;
+    width: 480px;
+    height: 160px;
+  }
+  .texto h1 {
+    font-size: 40px;
+    padding-bottom: 10px;
+  }
+  .texto p {
+    font-size: 15px;
+  }
+
+  .fondoprecios {
+    background-image: url("../img/bg-price.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 160vh;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: 100px 450px;
+    grid-gap: 20px 80px;
+    padding-bottom: 50px;
+    align-content: flex-end;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
+  .grid-container .titulob {
+    text-shadow: 2px 2px black;
+    font-size: 40px;
+    color: white;
+    text-align: center;
+  }
+
+  .grid-container > div {
+    background-color: white;
+    text-align: center;
+    padding: 30px 30px;
+    font-size: 30px;
+    border-radius: 25px;
+    width: 300px;
+  }
+  .grid-container > div h2 {
+    text-align: left;
+    font-size: 25px;
+    font-weight: 400;
+  }
+  .grid-container > div h1 {
+    text-align: left;
+    font-weight: 700;
+    font-size: 35px;
+  }
+  .grid-container > div li {
+    text-align: left;
+    font-size: 13px;
+    font-weight: 400;
+    padding: 10px 0;
+  }
+  .grid-container > div input {
+    margin-top: 20px;
+    width: 100%;
+    padding: 10px 0;
+    border: 0 solid;
+    background-color: #2ab7ca;
+    color: white;
+  }
+  .grid-container > div input:hover {
+    background-color: #77d1dd;
+    border: 0px;
+  }
+  .grid-container > div input:focus {
+    background-color: #8f9199;
+    border: 0px;
+  }
+
+  .item1 .paddingli {
+    margin-top: 20px;
+    margin-bottom: 150px;
+  }
+
+  .item2 .paddingli2 {
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+
+  .item1:hover, .item2:hover {
+    box-shadow: 8px 8px 9px 0 black;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .navegacion__barra #icono {
+    display: none;
+  }
+
+  .header {
+    background-image: url("../img/bg-hero.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 70vh;
+  }
+
+  .texto {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-end;
+    justify-content: flex-end;
+    width: 610px;
+    height: 200px;
+  }
+  .texto h1 {
+    padding-bottom: 10px;
+    font-size: 50px;
+  }
+  .texto p {
+    font-size: 20px;
+  }
+
+  .fondoprecios {
+    background-image: url("../img/bg-price.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: 100px 450px;
+    grid-gap: 0 80px;
+    padding-bottom: 100px;
+    color: black;
+    align-content: flex-end;
+    justify-content: center;
+    height: 100%;
+  }
+  .grid-container .titulob {
+    font-size: 40px;
+    color: white;
+    grid-column: 1/span 4;
+    text-align: center;
+  }
+
+  .grid-container > div {
+    background-color: white;
+    text-align: center;
+    padding: 30px 30px;
+    font-size: 30px;
+    border-radius: 25px;
+    width: 300px;
+  }
+  .grid-container > div h2 {
+    text-align: left;
+    font-size: 25px;
+    font-weight: 400;
+  }
+  .grid-container > div h1 {
+    text-align: left;
+    font-weight: 700;
+    font-size: 35px;
+  }
+  .grid-container > div li {
+    text-align: left;
+    font-size: 13px;
+    font-weight: 400;
+    padding: 10px 0;
+  }
+  .grid-container > div input {
+    margin-top: 20px;
+    width: 100%;
+    padding: 10px 0;
+    border: 0 solid;
+    background-color: #2ab7ca;
+    color: white;
+  }
+  .grid-container > div input:hover {
+    background-color: #77d1dd;
+    border: 0px;
+  }
+  .grid-container > div input:focus {
+    background-color: #8f9199;
+    border: 0px;
+  }
+
+  .item1 {
+    grid-column: 2/span 1;
+  }
+  .item1 .paddingli {
+    margin-top: 20px;
+    margin-bottom: 150px;
+  }
+
+  .item2 {
+    grid-column: 3/span 1;
+  }
+  .item2 .paddingli2 {
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+
+  .item1:hover, .item2:hover {
+    box-shadow: 8px 8px 9px 0 black;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .navegacion__barra #icono {
+    display: none;
+  }
+
+  .header {
+    background-image: url("../img/bg-hero.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 100vh;
+  }
+
+  .texto {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-end;
+    justify-content: flex-end;
+    width: 740px;
+    height: 250px;
+  }
+  .texto h1 {
+    padding-bottom: 10px;
+    font-size: 60px;
+  }
+  .texto p {
+    font-size: 20px;
+  }
+
+  .fondoprecios {
+    background-image: url("../img/bg-price.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: 100px 450px;
+    grid-gap: 0 80px;
+    padding-bottom: 100px;
+    color: black;
+    align-content: flex-end;
+    justify-content: center;
+    height: 100%;
+  }
+  .grid-container .titulob {
+    font-size: 40px;
+    color: white;
+    grid-column: 1/span 4;
+    text-align: center;
+  }
+
+  .grid-container > div {
+    background-color: white;
+    text-align: center;
+    padding: 30px 30px;
+    font-size: 30px;
+    border-radius: 25px;
+    width: 300px;
+  }
+  .grid-container > div h2 {
+    text-align: left;
+    font-size: 25px;
+    font-weight: 400;
+  }
+  .grid-container > div h1 {
+    text-align: left;
+    font-weight: 700;
+    font-size: 35px;
+  }
+  .grid-container > div li {
+    text-align: left;
+    font-size: 13px;
+    font-weight: 400;
+    padding: 10px 0;
+  }
+  .grid-container > div input {
+    margin-top: 20px;
+    width: 100%;
+    padding: 10px 0;
+    border: 0 solid;
+    background-color: #2ab7ca;
+    color: white;
+  }
+  .grid-container > div input:hover {
+    background-color: #77d1dd;
+    border: 0px;
+  }
+  .grid-container > div input:focus {
+    background-color: #8f9199;
+    border: 0px;
+  }
+
+  .item1 {
+    grid-column: 2/span 1;
+  }
+  .item1 .paddingli {
+    margin-top: 20px;
+    margin-bottom: 150px;
+  }
+
+  .item2 {
+    grid-column: 3/span 1;
+  }
+  .item2 .paddingli2 {
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+
+  .item1:hover, .item2:hover {
+    box-shadow: 8px 8px 9px 0 black;
+  }
+}
+@media (min-width: 1200px) {
+  .navegacion__barra #icono {
+    display: none;
+  }
+
+  .header {
+    background-image: url("../img/bg-hero.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 90vh;
+  }
+
+  .texto {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: flex-end;
+    justify-content: flex-end;
+    width: 740px;
+    height: 250px;
+  }
+  .texto h1 {
+    padding-bottom: 10px;
+    font-size: 60px;
+  }
+  .texto p {
+    font-size: 20px;
+  }
+
+  .fondoprecios {
+    background-image: url("../img/bg-price.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-rows: 100px 450px;
+    grid-gap: 0 80px;
+    padding-bottom: 100px;
+    color: black;
+    align-content: flex-end;
+    justify-content: center;
+    height: 100%;
+  }
+  .grid-container .titulob {
+    font-size: 40px;
+    color: white;
+    grid-column: 1/span 4;
+    text-align: center;
+  }
+
+  .grid-container > div {
+    background-color: white;
+    text-align: center;
+    padding: 30px 30px;
+    font-size: 30px;
+    border-radius: 25px;
+    width: 300px;
+  }
+  .grid-container > div h2 {
+    text-align: left;
+    font-size: 25px;
+    font-weight: 400;
+  }
+  .grid-container > div h1 {
+    text-align: left;
+    font-weight: 700;
+    font-size: 35px;
+  }
+  .grid-container > div li {
+    text-align: left;
+    font-size: 13px;
+    font-weight: 400;
+    padding: 10px 0;
+  }
+  .grid-container > div input {
+    margin-top: 20px;
+    width: 100%;
+    padding: 10px 0;
+    border: 0 solid;
+    background-color: #2ab7ca;
+    color: white;
+  }
+  .grid-container > div input:hover {
+    background-color: #77d1dd;
+    border: 0px;
+  }
+  .grid-container > div input:focus {
+    background-color: #8f9199;
+    border: 0px;
+  }
+
+  .item1 {
+    grid-column: 2/span 1;
+  }
+  .item1 .paddingli {
+    margin-top: 20px;
+    margin-bottom: 150px;
+  }
+
+  .item2 {
+    grid-column: 3/span 1;
+  }
+  .item2 .paddingli2 {
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+
+  .item1:hover, .item2:hover {
+    box-shadow: 8px 8px 9px 0 black;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
