--- a/assets/sass/layout/_seccionGrafico.scss
+++ b/assets/sass/layout/_seccionGrafico.scss
@@ -38,19 +38,19 @@
         }
     }
 
-    @keyframes example {
-        0%   {}
-        25%  {fill: #EE9480; top:10px;}
-        50%  {fill: #2AB7CA; left:0px;}
-        75%  {fill: #2AB7CA; left:0px;}
-        100% {fill: red; left:0px;}
-    }
-    @keyframes example2 {
-        0%   {fill: #2AB7CA; left:0px;}
-        25%  {fill: #2AB7CA; left:0px;}
-        50%  {fill: #EE9480; left:100px;}
-        75%  {fill: #EE9480; left:100px;}
-        100% {fill: red; left:0px;}
-    }
+    // @keyframes example {
+    //     0%   {}
+    //     25%  {fill: #EE9480; top:10px;}
+    //     50%  {fill: #2AB7CA; left:0px;}
+    //     75%  {fill: #2AB7CA; left:0px;}
+    //     100% {fill: red; left:0px;}
+    // }
+    // @keyframes example2 {
+    //     0%   {fill: #2AB7CA; left:0px;}
+    //     25%  {fill: #2AB7CA; left:0px;}
+    //     50%  {fill: #EE9480; left:100px;}
+    //     75%  {fill: #EE9480; left:100px;}
+    //     100% {fill: red; left:0px;}
+    // }
 
 }
