--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,30 +1,20 @@
-.Barra__Footer{
-    background-color: #221d23;
-    padding: 20px 40px ;
-    height: 50%;
-    color: white;
-
-    list-style: $none;
+footer{
     display: flex;
-    width: 100%;
-    height: 60px;
-    padding: 20px 10%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: #221d23;
+    justify-content: space-around;
+    align-items: flex-end;
+    color: white;
+    height: 50px;
     align-items: center;
-    justify-content: start;
-
-    &__lista{
-        display: flex;
-        flex-grow: 1;
-        list-style: $none;
-    }
-
-    &__item{
-        margin: 0 10px;
-        font-size: 16px;
-        font-weight: 600;
-    }
     
-    .ml{
-        margin-left: auto;
+
+    .legal{
+        
+        p{
+            display: inline-block;
+            padding: 0 5px;
+        }
     }
 }
