--- a/assets/sass/layout/_seccionGrafico.scss
+++ b/assets/sass/layout/_seccionGrafico.scss
@@ -16,6 +16,7 @@
     justify-content: center;
     align-content: center;
     .textoGrafico{
+        text-align: center;
         margin: 20px;
         h1{
             font-size: 30px;
